Fix GTK2 dark theme

BUG: 443104